# ckad-drills

./: .gitignore  Makefile  README.md  REFACTORING_TODO.md  ckad_balanced_exam.csv  ckad_full_question_bank.csv  ckad_gen.py  pyproject.toml  start_ckad_exam.command
question_banks/: README.md  application_deployment.yaml  application_design_and_build.yaml  application_environment_configuration_and_security.yaml  application_observability_and_maintenance.yaml  balanced_exam.yaml  services_and_networking.yaml  yaml_demo.yaml
scripts/: demo_yaml_drill.py  kind-cleanup.sh  kind-setup.sh
src/ckad_drills/: __init__.py  _namespaces.py  check_evaluator.py  cleanup.py  cli.py  config.py  core.py  datasets.py  environment.py  exceptions.py  generator.py  grader.py  grading.py  kubectl_runner.py  models.py  renderer.py  session.py  timer.py  yaml_datasets.py
tests/: _fixtures.py  test_ckad.py  test_cleanup.py  test_cli.py  test_datasets.py  test_generator.py  test_grading.py  test_renderer.py  test_session.py  test_timer.py  test_yaml_bank.py
tests/fixtures/: invalid_exam_blueprint_unknown_id.csv  invalid_questions_empty_verify.csv  invalid_questions_missing_verify.csv  sample_exam_blueprint.csv  sample_exam_blueprint.yaml  sample_questions.csv  sample_questions_extra.csv  sample_yaml_bank.yaml
